<resources>
    <string name="app_name">Calculadora</string>
    <string name="primeiroNumeroLabel">Primeiro número:</string>
    <string name="segundoNumeroLabel">Segundo número:</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">-</string>
    <string name="dicaNumero">Digite um número</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">*</string>
    <string name="divisao">/</string>
    <string name="operacaoLabel">Operação</string>
</resources>