<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewPrimeiroNumero"
        android:layout_width="204dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/primeiroNumeroLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textViewSegundoNumero"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/segundoNumeroLabel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupOperacao"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/radioGroupOperacao"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOperacao" />

    <EditText
        android:id="@+id/editTextPrimeiroNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/dicaNumero"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrimeiroNumero" />

    <EditText
        android:id="@+id/editTextSegundoNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/dicaNumero"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSegundoNumero" />

    <TextView
        android:id="@+id/textViewOperacao"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/operacaoLabel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPrimeiroNumero"
        app:layout_constraintStart_toStartOf="@+id/editTextPrimeiroNumero"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrimeiroNumero" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="calcular"
        android:text="@string/calcular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSegundoNumero"
        app:layout_constraintStart_toStartOf="@+id/editTextSegundoNumero"
        app:layout_constraintTop_toBottomOf="@+id/editTextSegundoNumero" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCalcular"
        app:layout_constraintStart_toStartOf="@+id/buttonCalcular"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

    <RadioGroup
        android:id="@+id/radioGroupOperacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textViewOperacao"
        app:layout_constraintStart_toStartOf="@+id/textViewOperacao"
        app:layout_constraintTop_toBottomOf="@+id/textViewOperacao">

        <RadioButton
            android:id="@+id/radioButtonSoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soma"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonSubtracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtracao"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMultiplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacao"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonDivisao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisao"
            android:textSize="20sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>